feat: feat/restructure-docker

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -245,7 +245,7 @@ tasks:
         --source {{ .SOURCE }} \
         --repository-name {{ .REPOSITORY_NAME }} \
         --registry-url {{ .REGISTRY_URL }} \
-        --version {{ .VERSION }} \
+        --tag {{ .VERSION }} \
         --progress plain
     vars:
       MODULE: docker
