--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 
 # Test binary, built with `go test -c`
 *.test
-
+.task
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
