--- a/tests/helm/helmfile.yaml
+++ b/tests/helm/helmfile.yaml
@@ -14,6 +14,6 @@ releases:
       - postgresqlDatabase: mydb
       - primary:
           persistence:
-            enabled: false   # for testing without PVCs
+            enabled: true # for testing without PVCs
       - metrics:
           enabled: true
