feat: fix/update-template-rendering

--- a/tests/templating/example-vars.yaml
+++ b/tests/templating/example-vars.yaml
@@ -1,8 +1,12 @@
 # Example variables file for templating
 name: Alice
+namespace: default
 env: int
 replicas: 3
 version: "1.0.0"
+debug: false
+enableLogging: true
+productionMode: true
 features:
   logging: true
   monitoring: true
